fix: styling error that collapsed navigation (applied margin auto to all items)

--- a/src/assets/styles/home.css
+++ b/src/assets/styles/home.css
@@ -126,7 +126,7 @@ svg {
   display: flex;
 }
 
-.section-works, *{
+.section-works *{
   margin: auto;
 }
 
